# cyclone

./: .gitignore  .gitmodules  Makefile  README.md
apps/pmemds/src/: pmemds.cc  pmemds.h
benchmarks/: Makefile.inc
benchmarks/common/: genzip.hpp
benchmarks/data/twitter/: README.txt
benchmarks/echo/echo/: Makefile  echo.py  echo_async_client.cpp  echo_client.cpp  echo_server.cpp
benchmarks/kvbench/echo/: Makefile  echo.py  echo_async_client.cpp  echo_server.cpp
benchmarks/kvbench/hashmap/: Makefile  hashmap.py  hashmap_async_client.cpp  hashmap_server.cpp
benchmarks/kvbench/memcached/: Makefile  memaslap.conf  memaslap.sh  memcached_kvbench.sh  memcached_local_client.cpp  memcached_start.sh
benchmarks/kvbench/novelsm/: Makefile  novelsm.py  novelsm_loader  novelsm_server  rocksdb.hpp  rocksdb_async_client.cpp  rocksdb_checkpoint.cpp  rocksdb_client.cpp  rocksdb_loader.cpp  rocksdb_server.cpp
benchmarks/kvbench/pmemds/: Makefile  pmemds.py  pmemds_async_client.cpp  pmemds_server.cpp
benchmarks/kvbench/pmemds-hashmap/: pmemds.py  pmemds_async_client.cpp  pmemds_server.cpp
benchmarks/kvbench/pmemkv/: pmemkv.hpp  pmemkv.py  pmemkv_server.cpp
benchmarks/kvbench/rocksdb/: Makefile  rocksdb.hpp  rocksdb.py  rocksdb_async_client.cpp  rocksdb_checkpoint.cpp  rocksdb_loader.cpp  rocksdb_server.cpp
benchmarks/test/: echo_client_multicore.cpp  echo_logserver.cpp  pmemkv_client.cpp  rocksdb_checkpoint.cpp
benchmarks/twitter/adjvector/: Makefile  adjvector.py  adjvector_async_client.cpp  adjvector_server.cpp
benchmarks/twitter/graphone/: #graphone.hpp#  Makefile  get_libs.sh  graph_interface.h  graphone.hpp  graphone.py  graphone_async_client.cpp  graphone_local.cpp  graphone_server.cpp
benchmarks/twitter/llama/: Makefile  llama.hpp  llama.py  llama_async_client.cpp  llama_local.cc  llama_local.cpp  llama_server.cpp
benchmarks/vote/: README.md  genzipf.h  refactor.sh
benchmarks/vote/memcached/: memcached_local_client.cpp
benchmarks/vote/novelsm/: novelsm.py  novelsm_loader  novelsm_server  rocksdb_checkpoint.cpp  rocksdb_loader.cpp  rocksdb_server.cpp
benchmarks/vote/pmemds/: Makefile  pmemds_async_client.cpp  pmemds_server.cpp
benchmarks/vote/pqueue/: Makefile  (+3 more)
containers/: Makefile  README.md  bliz_map.cpp  bliz_map.hpp  bliz_map_client
core/: Makefile  circular_log.h  clwb_sim.hpp  cyclone.cpp  cyclone.hpp  cyclone_comm_dpdk.hpp  cyclone_context.hpp  cyclone_ucp.cpp  cyclone_ucp.hpp  dispatch_client.cpp  dispatcher.cpp  latency_tracer.hpp  libcyclone.hpp  mcs_lock.hpp  scheduler.hpp  tcp_tunnel.cpp  tcp_tunnel.hpp
ds/: CMakeLists.txt  Makefile
ds/bench/: db_bench.cc  tags
ds/src/: pmemkv.cc
patches/: libpmemobcpp1.8.patch  log.patch  log.patch2  pmdk1.4.nolog.patch
patches/llama/: llama.build
pmemds/: .cproject  .project  CMakeLists.txt  Makefile  README.md
pmemds/include/: dpdk_client.hpp  pmemds-client.h  pmemds-common.h  pmemds.h  pmemds_client.hpp  pmemds_log.h  polymorphic_string.h
pmemds/include/hashmap/: hashmap-client.h  hashmap.h
pmemds/include/priority_queue/: persistent_priority_queue.hpp  priority_queue-client.h  priority_queue.h  volatile_priority_queue.hpp
pmemds/include/tree/: btree-client.h  btree.h
pmemds/include/vector/: adj_vector-client.hpp  adj_vector.h  adjvector-client.h  adjvector.h
pmemds/src/: dpdk_client.cc  pmemds-client.cc  pmemds-client.h  pmemds-common.h  pmemds.cc  pmemds.h
pmemds/src/hashmap/: hashmap-client.cc  hashmap.cc  hashmap.h
pmemds/src/priority_queue/: persistent_priority_queue.hpp  priority_queue-client.cc  priority_queue-client.h  priority_queue.cc  priority_queue.h
pmemds/src/tree/: btree-client.cc  btree-client.h  btree.cc  btree.h
pmemds/src/vector/: adj_vector-client.cc  adj_vector.cc  adjvector-client.cc  adjvector.cc
pmemds/tests/: CMakeLists.txt  bench.h  pmemds_adj_vector.cc  pmemds_hashmap.cc  pmemds_sharded_hashmap.cc  pmemds_shareded_pq.cc  pmemds_test.cc  random.h  test_client.h  test_common.hpp  test_main.cc  vote_test.cc
pmemds/tests/priority_queue/: pq_test.cc
pmemkv-test/: Makefile  pmemkv_app.cc
raft/: Makefile
raft/include/: raft.h  raft_log.h  raft_private.h
raft/src/: raft_log.c  raft_node.c  raft_server.c  raft_server_properties.c
scripts/: setup_hp.sh  setup_hp2.sh
scripts/common/: common.sh  commonbench.py  config_generator.py  copy_binaries.sh  deploy_services.sh  deploy_shutdown.sh  gather_output.sh
scripts/crash-sync/: memcached.sh  pmemkv.sh
scripts/echo/: echo.sh  echo_bench.py  echo_commute.sh  echo_commute_overhead.sh  echo_copy.sh  echo_copy_nobatch.sh  echo_nobatch.sh  run_echo.sh
scripts/kv/: kv_bench.py  map.sh  map_commute.sh  rocksdb.sh
scripts/kvbench/: debug.sh  do_all.sh  kv_bench.py  map.sh  map_commute.sh  rocksdb.sh
scripts/latency/: filebench.py  filebench.sh  fio.sh  memory.sh
scripts/twitter/: adjlist.sh  adjlist_commute.sh  graphone.sh  llama.sh  twitter_bench.py
scripts/vote/: novelsm.sh  prioqueue.sh  prioqueue_commute.sh  vote_bench.py
test/: Makefile  bliz_map.cpp  bliz_map.hpp  bliz_map_client.cpp  echo_async_client.cpp  echo_client.cpp  echo_server.cpp  pmemkv.hpp  pmemkv_async_client.cpp  pmemkv_client.cpp  pmemkv_server.cpp  rocksdb.hpp  rocksdb_async_client.cpp  rocksdb_loader.cpp  rocksdb_server.cpp
utils-arch-cluster/: aep-example.ini.2  aep-machines.ini.1  aep-machines.ini.2  aries-machines.ini.1  cluster-dpdk.ini.1  cluster-dpdk.ini.2  cluster-dpdk.ini.3  example.ini.1  example.ini.2  example.ini.3  jedi-machines.ini.1  jedi-machines.ini.2
utils-global/: blizmap.py  build_client.sh  common.sh  common_bench.py  commonbench.py  commute-numbers.sh  config_generator.py  copy_binaries.sh  copy_client_src.sh  deploy_configs.sh  deploy_services.sh  deploy_shutdown.sh  echo.py  gather_output.sh  hugepages.sh  kv_bench.py  numbers.sh  pmemkv.py  rocksdb.py  runscript.py  setup_hp.sh  twitter_bench.py  twitter_commute.sh  twitter_numbers.sh  ucx_build.sh  vote_bench.py  vote_commute.sh  vote_numbers.sh  vote_partition.sh
utils-global/plot_scripts/: common.py  echoplot.py  mlcplot.py  tree.py
(+20 files in other folders)
